--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-	<title>Andrew | The Portable Geek</title>
+	<title>Andrew D MacLean</title>
 
 	<link rel="icon" href="favicon.ico" type="image/png" />
 
@@ -25,14 +25,14 @@
 </head>
 <body>
 	<main>
-		<div class="introSmall">Hello, I'm Andrew...</div>
-		<div class="intro">The Portable Geek!</div>
+		 <div class="introSmall">Hello, I'm Andrew...</div>
+		<!-- <div class="intro"></div> -->
 		<div class="tagline">Educator | Collaborator | Learner</div>
 		<!-- Find your icons from here - https://fontawesome.com/icons?d=gallery&s=brands -->
 		<div class="icons-social">
-			<a target="_blank" href="https://github.com/theportablegeek"><i class="fab fa-github"></i></a>
-			<a target="_blank" href="https://twitter.com/theportablegeek"><i class="fab fa-twitter"></i></a>
-			<a target="_blank" href="https://facebook.com/theportablegeek"><i class="fab fa-facebook"></i></a>
+			<a target="_blank" href="https://github.com/andrewdmaclean"><i class="fab fa-github"></i></a>
+			<a target="_blank" href="https://twitter.com/andrewdmaclean"><i class="fab fa-twitter"></i></a>
+			<a target="_blank" href="https://linkedin.com/andrewdmaclean"><i class="fab fa-linkedin"></i></a>
 			<!--<a target="_blank" href="https://dev.to/flexdinesh"><i class="fab fa-dev"></i></a>-->
 			<!--<a target="_blank" href="https://stackoverflow.com/story/flexdinesh"><i class="fab fa-stack-overflow"></i></a>-->
 			<!--<a target="_blank" href="https://www.linkedin.com/in/dineshpandiyan"><i class="fab fa-linkedin"></i></a>-->
