--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 		<div class="icons-social">
 			<a target="_blank" href="https://github.com/andrewdmaclean"><i class="fab fa-github"></i></a>
 			<a target="_blank" href="https://twitter.com/andrewdmaclean"><i class="fab fa-twitter"></i></a>
-			<a target="_blank" href="https://linkedin.com/andrewdmaclean"><i class="fab fa-linkedin"></i></a>
+			<a target="_blank" href="https://ca.linkedin.com/in/andrewdmaclean"><i class="fab fa-linkedin"></i></a>
 			<!--<a target="_blank" href="https://dev.to/flexdinesh"><i class="fab fa-dev"></i></a>-->
 			<!--<a target="_blank" href="https://stackoverflow.com/story/flexdinesh"><i class="fab fa-stack-overflow"></i></a>-->
 			<!--<a target="_blank" href="https://www.linkedin.com/in/dineshpandiyan"><i class="fab fa-linkedin"></i></a>-->
