--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 	<main>
 		 <div class="introSmall">Hello, I'm Andrew...</div>
 		<!-- <div class="intro"></div> -->
-		<div class="tagline">Educator | Collaborator | Learner</div>
+		<div class="tagline">Educator | Collaborator | Creator</div>
 		<!-- Find your icons from here - https://fontawesome.com/icons?d=gallery&s=brands -->
 		<div class="icons-social">
 			<a target="_blank" href="https://github.com/andrewdmaclean"><i class="fab fa-github"></i></a>
