--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 </head>
 <body>
 	<main>
-		 <div class="introSmall">Hello, I'm Andrew...</div>
+		 <div class="introSmall">Andrew MacLean</div>
 		<!-- <div class="intro"></div> -->
 		<div class="tagline">Educator | Collaborator | Creator</div>
 		<!-- Find your icons from here - https://fontawesome.com/icons?d=gallery&s=brands -->
