--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
   <!-- Favicon
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-  <link rel="icon" type="image/png" href="https://pbs.twimg.com/profile_images/1304075497106669568/NC6aIQh6_400x400.jpg">
+  <link rel="icon" type="image/png" href="/images/avatar.png">
 
   <!-- Analytics
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
@@ -47,7 +47,7 @@
     <div class="row">
       <div class="column" style="margin-top: 10%">
         <!-- Your Image Here -->
-        <img src="https://pbs.twimg.com/profile_images/1304075497106669568/NC6aIQh6_400x400.jpg" style="border-radius:50%; max-width:100px; height:auto;" srcset="https://pbs.twimg.com/profile_images/1304075497106669568/NC6aIQh6_400x400.jpg">
+        <img src="/images/avatar.png" style="border-radius:50%; max-width:100px; height:auto;" srcset="/images/avatar.png">
 
         <!-- Your Name -->
         <h1>Andrew D MacLean</h1>
