--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
   <link rel="stylesheet" href="css/normalize.css">
   <link id="pagestyle" rel="stylesheet" href="css/skeleton-dark.css">
   <link rel="stylesheet" href="css/brands.css">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 
   <!-- Favicon
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
@@ -33,13 +34,8 @@
 	
   <!-- Dark Mode Scripts
   –––––––––––––––––––––––––––––––––––––––––––––––––– --> 
-  <script>
-	function swapStyleSheet(sheet){
-		document.getElementById('pagestyle').setAttribute('href', sheet);
-	}
-  </script>  
-</head>
-<body>
+
+<script src="/assets/dark-mode-switch.js"></script>
 
   <!-- Primary Page Layout
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
@@ -56,8 +52,10 @@
 		
 		
         <!-- Dark Mode switch -->
-    <p><a onclick="swapStyleSheet('css/skeleton-dark.css')">🌑 Dark Theme</a> | <a onclick="swapStyleSheet('css/skeleton-light.css')">☀️ Light Theme</a></p>
-
+	<div class="form-check form-switch">
+	  <input type="checkbox" class="form-check-input" id="darkSwitch" />
+	  <label class="custom-control-label" for="darkSwitch">Dark Mode</label>
+	</div>
 
         <!-- Short Bio -->
         <p>👋 Here's where you can find me around the internet.</p>
@@ -162,5 +160,5 @@
 
 <div id="wcb" class="carbonbadge"></div>
 <script src="https://unpkg.com/website-carbon-badges@1.1.1/b.min.js" defer></script>
-
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 </html>
