--- a/index.html
+++ b/index.html
@@ -22,7 +22,6 @@
   <link rel="stylesheet" href="css/normalize.css">
   <link id="pagestyle" rel="stylesheet" href="css/skeleton-dark.css">
   <link rel="stylesheet" href="css/brands.css">
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 
   <!-- Favicon
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
@@ -34,8 +33,13 @@
 	
   <!-- Dark Mode Scripts
   –––––––––––––––––––––––––––––––––––––––––––––––––– --> 
-
-<script src="/assets/dark-mode-switch.js"></script>
+  <script>
+	function swapStyleSheet(sheet){
+		document.getElementById('pagestyle').setAttribute('href', sheet);
+	}
+  </script>  
+</head>
+<body>
 
   <!-- Primary Page Layout
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
@@ -52,10 +56,8 @@
 		
 		
         <!-- Dark Mode switch -->
-	<div class="form-check form-switch">
-	  <input type="checkbox" class="form-check-input" id="darkSwitch" />
-	  <label class="custom-control-label" for="darkSwitch">Dark Mode</label>
-	</div>
+    <p><a onclick="swapStyleSheet('css/skeleton-dark.css')">🌑 Dark Theme</a> | <a onclick="swapStyleSheet('css/skeleton-light.css')">☀️ Light Theme</a></p>
+
 
         <!-- Short Bio -->
         <p>👋 Here's where you can find me around the internet.</p>
@@ -160,5 +162,5 @@
 
 <div id="wcb" class="carbonbadge"></div>
 <script src="https://unpkg.com/website-carbon-badges@1.1.1/b.min.js" defer></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+
 </html>
