--- a/index.html
+++ b/index.html
@@ -149,6 +149,9 @@
         <!-- Mixer 
         <a class="button button-mixer" href="#"><img class="icon" src="icons/mixer.svg">Mixer</a>
           <br> -->
+	      
+	<!-- Buy Me a Coffee -->
+        <a class="button button-buymeacoffee" href="https://buymeacoffee.com/andrewdmaclean"><img class="icon" src="icons/buymeacoffee.svg">Buy me a coffee</a>
           <br>
         <p>Built with  <a href="https://littlelink.io">LittleLink</a>.</p>
           
