--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
           <br> -->
 	      
 	<!-- Buy Me a Coffee -->
-        <a class="button button-buymeacoffee" href="https://buymeacoffee.com/andrewdmaclean"><img class="icon-wide" src="icons/bmc-full-logo.svg"></a>
+        <a class="button button-buymeacoffee" href="https://buymeacoffee.com/andrewdmaclean"><img class="icon-wide" src="icons/bmc-button.svg"></a>
           <br>
         <p>Built with  <a href="https://littlelink.io">LittleLink</a>.</p>
           
