--- a/index.html
+++ b/index.html
@@ -150,6 +150,10 @@
         <a class="button button-mixer" href="#"><img class="icon" src="icons/mixer.svg">Mixer</a>
           <br> -->
 	      
+	<!-- Book a Meeting-->
+     <a class="button button-calendar" href="https://cal.com/andrewdmaclean"><img class="icon" src="icons/calendar.svg">Book a Meeting</a>
+          <br>
+	      
 	<!-- Buy Me a Coffee -->
         <a class="button button-buymeacoffee" href="https://buymeacoffee.com/andrewdmaclean"><img class="icon-wide" src="icons/bmc-button.svg"></a>
           <br>
