--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
           <br> -->
 	      
 	<!-- Book a Meeting-->
-     <a class="button button-calendar" href="https://cal.com/andrewdmaclean"><img class="icon" src="icons/calendar.svg">Book a Meeting</a>
+     <a class="button button-blank" href="https://cal.com/andrewdmaclean"><img class="icon" src="icons/calendar.svg">Book a Meeting</a>
           <br>
 	      
 	<!-- Buy Me a Coffee -->
