--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
   <!-- Analytics
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
 <script>UST_CT = [];UST = { s: Date.now(), addTag: function(tag) { UST_CT.push(tag) } };UST.addEvent = UST.addTag;</script>
-<script src="http://uxwizz.portablegeek.ca/userTrack/server/ust.min.js?v=4.2.0" async></script>
+<script src="https://uxwizz.portablegeek.ca/userTrack/server/ust.min.js?v=4.2.0" async></script>
 	
   <!-- Dark Mode Scripts
   –––––––––––––––––––––––––––––––––––––––––––––––––– --> 
