--- a/index.html
+++ b/index.html
@@ -150,6 +150,10 @@
         <!-- Mixer 
         <a class="button button-mixer" href="#"><img class="icon" src="icons/mixer.svg">Mixer</a>
           <br> -->
+	     
+	      	<!-- Google Scholar -->
+     <a class="button button-blank" href="https://scholar.google.ca/citations?user=w-7jYjwAAAAJ&hl=en"><img class="icon" src="icons/scholar.svg">Read my Research</a>
+          <br>
 	      
 	<!-- Book a Meeting-->
      <a class="button button-twitch" href="https://cal.com/andrewdmaclean"><img class="icon" src="icons/calendar.svg">Book a Meeting</a>
