--- a/index.html
+++ b/index.html
@@ -6,8 +6,12 @@
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <meta charset="utf-8">
   <title>Andrew D MacLean</title>
-  <meta name="description" content="">
-  <meta name="author" content="">
+  <meta name="description" content="Personal Website for Andrew MacLean">
+  <meta name="author" content="Andrew MacLean">
+  <meta property="og:title" content="Personal Website for Andrew MacLean" />
+  <meta property="og:type" content="website" />
+  <meta property="og:image" content="https://user-images.githubusercontent.com/26526271/148108126-3271e21c-76ff-4588-8dfb-698775da2107.png" />
+  <meta property="og:url" content="https://www.andrewdmaclean.com" />
 
   <!-- Mobile Specific Metas
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
