--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <meta charset="utf-8">
   <title>Andrew D MacLean</title>
+  <meta name="twitter:card" content="summary_large_image">
   <meta name="author" content="Andrew MacLean" />
   <meta property="og:title" content="Andrew MacLean" />
   <meta property="og:description" content="Educator | Collaborator | Creator"/>
