--- a/podcasts.html
+++ b/podcasts.html
@@ -59,72 +59,30 @@
   <div class="container">
     <div class="row">
       <div class="column" style="margin-top: 10%">
+
+        <p><a href="index.html"><i class="fa-solid fa-caret-left"></i> Go Back</a></p>
         <!-- Your Image Here -->
         <img src="images/avatar.png" style="border-radius:50%; max-width:100px; height:auto;"
           srcset="images/avatar.png">
 
         <!-- Your Name -->
-        <h1>Andrew D MacLean</h1>
+        <h1>Podcast Appearances</h1>
 
-        <h3> Educator | Collaborator | Creator </h3>
-
-
+       
         <!-- Dark Mode switch -->
         <p><a onclick="swapStyleSheet('css/skeleton-dark.css')">🌑 Dark Theme</a> | <a
             onclick="swapStyleSheet('css/skeleton-light.css')">☀️ Light Theme</a></p>
 
 
-        <!-- Short Bio -->
-        <p>👋 Here's where you can find me around the internet.</p>
-
-
-        <!-- Replace # with your profile URL. Delete whatever you don't need & create your own brand styles in css/brands.css -->
-
-
-        <!-- Github -->
-        <a class="button button-github" href="https://github.com/andrewdmaclean"><img class="icon"
-            src="icons/github.svg">Github</a>
+        <!-- Startup Slam -->
+        <a class="button button-default" href="https://open.spotify.com/episode/0hr144JJAGUHp7ztCOSg2a?si=FTiTPRH_RpawrMSGdYFYgA">Shaun Pepper Podcast</a>
         <br>
 
-        <!-- Twitter -->
-        <a class="button button-twit" href="https://twitter.com/andrewdmaclean"><img class="icon"
-            src="icons/twitter.svg">Twitter</a>
+          <!-- Startup Slam -->
+          <a class="button button-default" href="https://anchor.fm/the-mycelium-network/episodes/The-Mycelium-Network-Podcast-with-Andrew-MacLean---Episode-009-e1o5pv3/a-a8iichb">Mycelium Network Podcast</a>
         <br>
 
-        <!-- LinkedIn -->
-        <a class="button button-linked" href="https://linkedin.com/in/andrewdmaclean"><img class="icon"
-            src="icons/linkedin.svg">LinkedIn</a>
-        <br>
-
-         <!-- Google Scholar -->
-        <a class="button button-dev-to" href="https://scholar.google.ca/citations?user=w-7jYjwAAAAJ&hl=en"><img
-            class="icon" src="icons/scholar.svg">Read my Research</a>
-        <br>
-
-        <!-- Book a Meeting-->
-        <a class="button button-twitch" href="https://cal.com/andrewdmaclean"><img class="icon"
-            src="icons/calendar.svg">Book a Meeting</a>
-        <br>
-
-        <!-- Try Comtinuum-->
-        <a class="button button-dev-to" href="https://comtinuum.ca"><img class="icon" src="icons/comtinuum.svg">Try
-          Comtinuum</a>
-        <br>
-
-        <!-- Buy Me a Coffee -->
-        <a class="button button-coffee" href="https://buymeacoffee.com/andrewdmaclean"><img class="icon"
-            src="icons/coffee.svg">Buy me a Coffee</a>
-        <br>
-
-         <!-- Conference Talks -->
-         <a class="button button-default" href="/talks.html"><img class="icon"
-          src="icons/podium.svg">Conference Talks</a>
-      <br>
-
-       <!-- Podcasts -->
-       <a class="button button-default" href="/podcasts.html"><img class="icon"
-        src="icons/microphone.svg">Podcast Appearances</a>
-    <br>
+        
         <!-- Built with LittleLink -->
 
         <p>Built with <a href="https://littlelink.io">LittleLink</a>.</p>
