--- a/index.html
+++ b/index.html
@@ -133,13 +133,9 @@
     </div>
   </div>
 
-  <!-- ShyNet Analytics -->
+  <!-- phpAnalytics -->
 
-  <noscript>
-    <img src="https://shynet-comtinuum.herokuapp.com/ingress/3745aea0-8e05-4b25-9285-b028957098df/pixel.gif">
-  </noscript>
-  <script defer
-    src="https://shynet-comtinuum.herokuapp.com/ingress/3745aea0-8e05-4b25-9285-b028957098df/script.js"></script>
+<script data-host="https://analytics.portablegeek.ca" data-dnt="false" src="https://analytics.portablegeek.ca/js/script.js" id="ZwSg9rf6GA" async defer></script>
   <!-- End Document
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
 </body>
